finds nat parks in states

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Repo finder</title>
+    <title>My Nat Park</title>
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -19,205 +19,205 @@
         <div class="group">
             <div class="item">
                 <div>
-                    <input type="checkbox" id="Alabama" name="Alabama" value="Alabama">
+                    <input type="checkbox" id="Alabama" name="states" value="AL">
                     <label for="Alabama">Alabama</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Alaska" name="Alaska" value="Alaska">
+                    <input type="checkbox" id="Alaska" name="states" value="AK">
                     <label for="Alaska">Alaska</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Arizona" name="Arizona" value="Arizona">
+                    <input type="checkbox" id="Arizona" name="states" value="AZ">
                     <label for="Arizona">Arizona</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Arkansas" name="Arkansas" value="Arkansas">
+                    <input type="checkbox" id="Arkansas" name="states" value="AR">
                     <label for="Arkansas">Arkansas</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="California" name="California" value="California">
+                    <input type="checkbox" id="California" name="states" value="CA">
                     <label for="California">California</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Colorado" name="Colorado" value="Colorado">
+                    <input type="checkbox" id="Colorado" name="states" value="CO">
                     <label for="Colorado">Colorado</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Connecticut" name="Connecticut" value="Connecticut">
+                    <input type="checkbox" id="Connecticut" name="states" value="CT">
                     <label for="Connecticut">Connecticut</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Delaware" name="Delaware" value="Delaware">
+                    <input type="checkbox" id="Delaware" name="states" value="DE">
                     <label for="Delaware">Delaware</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Florida" name="Florida" value="Florida">
+                    <input type="checkbox" id="Florida" name="states" value="FL">
                     <label for="Florida">Florida</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Georgia" name="Georgia" value="Georgia">
+                    <input type="checkbox" id="Georgia" name="states" value="GA">
                     <label for="Georgia">Georgia</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Hawaii" name="Hawaii" value="Hawaii">
+                    <input type="checkbox" id="Hawaii" name="states" value="HI">
                     <label for="Hawaii">Hawaii</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Idaho" name="Idaho" value="Idaho">
+                    <input type="checkbox" id="Idaho" name="states" value="ID">
                     <label for="Idaho">Idaho</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Illinois" name="Illinois" value="Illinois">
+                    <input type="checkbox" id="Illinois" name="states" value="IL">
                     <label for="Illinois">Illinois</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Indiana" name="Indiana" value="Indiana">
+                    <input type="checkbox" id="Indiana" name="states" value="IN">
                     <label for="Indiana">Indiana</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Iowa" name="Iowa" value="Iowa">
+                    <input type="checkbox" id="Iowa" name="states" value="IA">
                     <label for="Iowa">Iowa</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Kansas" name="Kansas" value="Kansas">
+                    <input type="checkbox" id="Kansas" name="states" value="KS">
                     <label for="Kansas">Kansas</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Kentucky" name="Kentucky" value="Kentucky">
+                    <input type="checkbox" id="Kentucky" name="states" value="KY">
                     <label for="Kentucky">Kentucky</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Louisiana" name="Louisiana" value="Louisiana">
+                    <input type="checkbox" id="Louisiana" name="states" value="LA">
                     <label for="Louisiana">Louisiana</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Maine" name="Maine" value="Maine">
+                    <input type="checkbox" id="Maine" name="states" value="ME">
                     <label for="Maine">Maine</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Maryland" name="Maryland" value="Maryland">
+                    <input type="checkbox" id="Maryland" name="states" value="MD">
                     <label for="Maryland">Maryland</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Massachusetts" name="Massachusetts" value="Massachusetts">
+                    <input type="checkbox" id="Massachusetts" name="states" value="MA">
                     <label for="Massachusetts">Massachusetts</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Michigan" name="Michigan" value="Michigan">
+                    <input type="checkbox" id="Michigan" name="states" value="MI">
                     <label for="Michigan">Michigan</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Minnesota" name="Minnesota" value="Minnesota">
+                    <input type="checkbox" id="Minnesota" name="states" value="MN">
                     <label for="Minnesota">Minnesota</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Mississippi" name="Mississippi" value="Mississippi">
+                    <input type="checkbox" id="Mississippi" name="states" value="MS">
                     <label for="Mississippi">Mississippi</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Missouri" name="Missouri" value="Missouri">
+                    <input type="checkbox" id="Missouri" name="states" value="MO">
                     <label for="Missouri">Missouri</label>
                 </div>
             </div>
             <div class="item">
                 <div>
-                    <input type="checkbox" id="Montana" name="Montana" value="Montana">
+                    <input type="checkbox" id="Montana" name="states" value="MT">
                     <label for="Montana">Montana</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Nebraska" name="Nebraska" value="Nebraska">
+                    <input type="checkbox" id="Nebraska" name="states" value="NE">
                     <label for="Nebraska">Nebraska</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Nevada" name="Nevada" value="Nevada">
+                    <input type="checkbox" id="Nevada" name="states" value="NV">
                     <label for="Nevada">Nevada</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="New Hampshire" name="New Hampshire" value="New Hampshire">
+                    <input type="checkbox" id="New Hampshire" name="states" value="NH">
                     <label for="New Hampshire">New Hampshire</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="New Jersey" name="New Jersey" value="New Jersey">
+                    <input type="checkbox" id="New Jersey" name="states" value="NH">
                     <label for="New Jersey">New Jersey</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="New Mexico" name="New Mexico" value="New Mexico">
+                    <input type="checkbox" id="New Mexico" name="states" value="NM">
                     <label for="New Mexico">New Mexico</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="New York" name="New York" value="New York">
+                    <input type="checkbox" id="New York" name="states" value="NY">
                     <label for="New York">New York</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="North Carolina" name="North Carolina" value="North Carolina">
+                    <input type="checkbox" id="North Carolina" name="states" value="NoC">
                     <label for="North Carolina">North Carolina</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="North Dakota" name="North Dakota" value="North Dakota">
+                    <input type="checkbox" id="North Dakota" name="states" value="ND">
                     <label for="North Dakota">North Dakota</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Ohio" name="Ohio" value="Ohio">
+                    <input type="checkbox" id="Ohio" name="states" value="OH">
                     <label for="Ohio">Ohio</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Oklahoma" name="Oklahoma" value="Oklahoma">
+                    <input type="checkbox" id="Oklahoma" name="states" value="OK">
                     <label for="Oklahoma">Oklahoma</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Oregon" name="Oregon" value="Oregon">
+                    <input type="checkbox" id="Oregon" name="states" value="OR">
                     <label for="Oregon">Oregon</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Pennsylvania" name="Pennsylvania" value="Pennsylvania">
+                    <input type="checkbox" id="Pennsylvania" name="states" value="PA">
                     <label for="Pennsylvania">Pennsylvania</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Rhode Island" name="Rhode Island" value="Rhode Island">
+                    <input type="checkbox" id="Rhode Island" name="states" value="RI">
                     <label for="Rhode Island">Rhode Island</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="South Carolina" name="South Carolina" value="South Carolina">
+                    <input type="checkbox" id="South Carolina" name="states" value="SC">
                     <label for="South Carolina">South Carolina</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="South Dakota" name="South Dakota" value="South Dakota">
+                    <input type="checkbox" id="South Dakota" name="states" value="SD">
                     <label for="South Dakota">South Dakota</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Tennessee" name="Tennessee" value="Tennessee">
+                    <input type="checkbox" id="Tennessee" name="states" value="TN">
                     <label for="Tennessee">Tennessee</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Texas" name="Texas" value="Texas">
+                    <input type="checkbox" id="Texas" name="states" value="TX">
                     <label for="Texas">Texas</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Utah" name="Utah" value="Utah">
+                    <input type="checkbox" id="Utah" name="states" value="UT">
                     <label for="Utah">Utah</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Vermont" name="Vermont" value="Vermont">
+                    <input type="checkbox" id="Vermont" name="states" value="VT">
                     <label for="Vermont">Vermont</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Virginia" name="Virginia" value="Virginia">
+                    <input type="checkbox" id="Virginia" name="states" value="VA">
                     <label for="Virginia">Virginia</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Washington" name="Washington" value="Washington">
+                    <input type="checkbox" id="Washington" name="states" value="WA">
                     <label for="Washington">Washington</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="West Virginia" name="West Virginia" value="West Virginia">
+                    <input type="checkbox" id="West Virginia" name="states" value="WV">
                     <label for="West Virginia">West Virginia</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Wisconsin" name="Wisconsin" value="Wisconsin">
+                    <input type="checkbox" id="Wisconsin" name="states" value="WI">
                     <label for="Wisconsin">Wisconsin</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="Wyoming" name="Wyoming" value="Wyoming">
+                    <input type="checkbox" id="Wyoming" name="states" value="WY">
                     <label for="Wyoming">Wyoming</label>
                 </div>
             </div>
