corrects NC state code, multi-state code problem

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     <label for="New York">New York</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="North Carolina" name="states" value="NoC">
+                    <input type="checkbox" id="North Carolina" name="states" value="NC">
                     <label for="North Carolina">North Carolina</label>
                 </div>
                 <div>
