fixes NH state code

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <label for="New Hampshire">New Hampshire</label>
                 </div>
                 <div>
-                    <input type="checkbox" id="New Jersey" name="states" value="NH">
+                    <input type="checkbox" id="New Jersey" name="states" value="NJ">
                     <label for="New Jersey">New Jersey</label>
                 </div>
                 <div>
